# Graphic-Manager

./: CMakeLists.txt
doc/: README.txt
examples/test/: changingTheSound.cpp
include/: Exceptions.h  GraphicsManager.h
include/Graphics/: Graphics.h
include/Graphics/InterfaceElements/: Button.h  Checkbox.h  ProgressBar.h  TextField.h  Widget.h
include/Graphics/InterfaceElements/ButtonFactory/: Button_factory.h  Default_button_factory.h
include/Graphics/InterfaceElements/Factories/: CheckBox_factory.h  Default_CheckBox_factory.h  Default_button_factory.h
src/: AnchoredElement.cpp  Button.cpp  Checkbox.cpp  ProgressBar.cpp  TextField.cpp  main.cpp
tests/: Engine.cpp  Engine.h
